# direnv

./: .editorconfig  .envrc  .envrc.ps1  .gitignore  .golangci.yml  .goreleaser.yaml  .mergify.yml  .travis.yml  Brewfile  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  GNUmakefile  Gemfile  Gopkg.toml  LICENSE  LICENSE.md  Makefile  README  README.md  _config.yml  appveyor.yml  atom.xml  azure-pipelines.yml  cmd_allow.go  cmd_apply_dump.go  cmd_complete.go  cmd_current.go  cmd_deny.go  cmd_dotenv.go  cmd_dotenv_test.go  cmd_dump.go  cmd_edit.go  cmd_exec.go  cmd_expand_path.go  cmd_export.go  cmd_fetchurl.go  cmd_gzenv.go  cmd_help.go  (+74 more)
.devcontainer/: Containerfile  devcontainer.json
.github/: ISSUE_TEMPLATE.md
_includes/: head-custom.html
_layouts/: default.html
_posts/: 2013-04-01-direnv-2-is-coming.md  2013-04-01-direnv-2.0.0-rc1.md  2013-06-16-direnv-2-released.md  2013-06-22-direnv-2.0.1.md  2013-10-12-direnv-screencasts.md  2013-11-11-direnv-2.1.0.md  2013-11-22-manage-your-rubies-with-direnv-and-ruby-install.md
ci/: build-steps.yml  release-steps.yml
demo/: start.fish
docs/: Makefile  cli.rst  commands.rst  conf.py  config.rst  development.md  dont-check-in-dotenvrc.md  github-actions.md  hook.md  index.rst  install.rst  installation.md  overview.rst  ruby.md  screencasts.md  sidebar.md  stdlib.rst  usage.rst
dotenv/: parse.go  parse_test.go
etc/: direnv.toml-default  direnvrc-default
fish/: cd.fish
gzenv/: gzenv.go
libexec/: direnv  direnv-diff  direnv-disable  direnv-dump  direnv-enable  direnv-exec  direnv-export  direnv-hook  (+3 more)
(+275 files in other folders)
