[package]
name = "direnv"
version = "3.0.0"
authors = ["zimbatm <zimbatm@zimbatm.com>"]
edition = "2018"
license = "GPL-3.0+"
description = "direnv re-invented"
repository = "https://github.com/direnv/direnv"

[dependencies]
getopts = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"
